@@ -1,13 +1,13 @@
-# Étape 1 : Build avec Maven + JDK 17
-FROM maven:3.9.0-eclipse-temurin-17 AS build
+# Étape 1 : Build
+FROM maven:3.9.0-eclipse-temurin-21 AS build
 
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-# Étape 2 : Runtime avec JDK 17
-FROM eclipse-temurin:17-jdk-jammy
+# Étape 2 : Runtime
+FROM eclipse-temurin:21-jdk-jammy
 
 WORKDIR /app
 COPY --from=build /app/target/mon-app-java-1.0.0.jar app.jar
@@ -17,4 +17,4 @@ EXPOSE 8080
 ENV JAVA_OPTS="-Xmx512m -Xms256m"
 ENV SERVER_PORT=8080
 
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+ENTRYPOINT ["sh", "-c", "java --enable-preview $JAVA_OPTS -jar app.jar"]
